Fix invisible scrollbars

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -133,7 +133,7 @@
   }
 
   * {
-    @apply border-border;
+    @apply border-border scrollbar-thumb-primary;
   }
 
   html,
